# casport

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md
app/: README.md  index.html  package.json  test-performance.html  vite.config.js
app/src/: main.js
app/src/components/: Controls.js  NetworkBuilder.js  RLPlot.js  SmithChart.js
app/src/core/: ShaderManager.js  UniformBuffer.js  WebGPUContext.js
app/src/shaders/: smithChart.wgsl
app/src/styles/: main.css
app/src/ui/: ControlPanel.js  FrequencyPanel.js  LayoutGrid.js  NetworkBuilder.js  PlotSettingsPanel.js  StatusBar.js
app/src/utils/: CascadixWrapper.js  CascadixWrapperEnhanced.js  NetworkAnalysis.js
apps/: CMakeLists.txt  example_filter.cc  tcas.cc
cascadix/apps/: CMakeLists.txt
cascadix/include/: component_sweep.h  components.h  frequency_sweep.h  monte_carlo.h  smith_chart.h  smith_chart_generator.h
cascadix/src/: CMakeLists.txt  FORMULAS.md  component_sweep.cc  components.cc  monte_carlo.cc  smith_chart.cc  smith_chart_generator.cc  two_port.cc
cascadix/tests/: test_cascading.cc  test_conversions.cc  test_smith_chart_generator.cc
cascadix/wasm/: README.md  bindings.cc  serve.sh
include/: cascadix.h  casport.h  component_sweep.h  components.h  monte_carlo.h  smith_chart.h  smith_chart_generator.h  two_port.h
src/: FORMULAS.md  casport.cc  smith_chart_generator.cc  two_port.cc
tests/: test_components.cc  test_conversions.cc  test_frequency_sweep.cc
wasm/: README.md  bindings.cc  demo.html  example.html
